--- a/templates/auther/base.html
+++ b/templates/auther/base.html
@@ -269,23 +269,48 @@
             <li class="dropdown-submenu">
               <a href="#">Add Data <i class="fas fa-chevron-right"></i></a>
               <ul class="dropdown-menu pull-right">
-                <li><a href="#">Organisation</a></li>
-                <li> 
-                  <button class ="button" type="submit" style="vertical-align:middle">
-                    {% with table_name="auther_bank" app_name="auther" model_name="bank" %}
-                     <a href="{% url 'show_template' table_name app_name model_name %}">Bank details</a>
-                    {% endwith %}
-                </button>
-                </li>
-                <li><a href="#">Company</a></li>
+                <li><a href="/org"><span>Organisation Form</span></a></li>
+                <li><a href="/company"><span>Company Form</span></a></li>
+                <li><a href="/bank"><span>Bank Form</span></a></li>
+                <li><a href="/template"><span>Templates Form</span></a></li>
+                <li><a href="/templatefields"><span>Templatefields Form</span></a></li>
+                <li><a href="/item"><span>Item Form</span></a></li>
+                <li><a href="/invoice"><span>Invoice Form</span></a></li>
               </ul>
             </li>
+                            
+                                        <!-- View Details -->
             <li class="dropdown-submenu">
               <a href="#">View Details <i class="fas fa-chevron-right"></i></a>
               <ul class="dropdown-menu pull-right">
-                <li><a href="#">Organisation Detail</a></li>
-                <li><a href="#">Bank Detail</a></li>
-                <li><a href="#">Company Detail</a></li>
+                <li>
+                  {% with table_name="auther_bank" app_name="auther" model_name="bank" %}
+                   <a href="{% url 'show_template' table_name app_name model_name %}">Bank details</a>
+                  {% endwith %}
+
+                <li>{% with table_name="auther_template" app_name="auther" model_name="template" %}
+                  <a href="{% url 'show_template' table_name app_name model_name %}">Templates</a>
+                 {% endwith %}</li>
+              
+                <li>{% with table_name="auther_organization" app_name="auther" model_name="org" %}
+                  <a href="{% url 'show_template' table_name app_name model_name %}">Organization</a>
+                 {% endwith %}</li>
+
+                 <li>{% with table_name="auther_company" app_name="auther" model_name="company" %}
+                  <a href="{% url 'show_template' table_name app_name model_name %}">Company</a>
+                 {% endwith %}</li>
+                
+                 <li>{% with table_name="auther_item" app_name="auther" model_name="item" %}
+                  <a href="{% url 'show_template' table_name app_name model_name %}">Item</a>
+                 {% endwith %}</li>
+
+                 <li>{% with table_name="auther_templatefields" app_name="auther" model_name="templatefields" %}
+                  <a href="{% url 'show_template' table_name app_name model_name %}">Templatefields</a>
+                 {% endwith %}</li>
+
+                 <li>{% with table_name="auther_invoice" app_name="auther" model_name="invoice" %}
+                  <a href="{% url 'show_template' table_name app_name model_name %}">Invoice</a>
+                 {% endwith %}</li>
               </ul>
             </li>
           </ul>
