--- a/templates/auther/show.html
+++ b/templates/auther/show.html
@@ -50,7 +50,7 @@ th {
                     <th>{{ column }}</th>
                 {% endfor %}
                 <th>Delete</th>
-                <th>Update</th>
+                <th>Edit</th>
             </tr>
         </thead>
         <tbody>
@@ -60,7 +60,7 @@ th {
                         <td>{{ values }}</td>
                     {% endfor %}
                     <td><a href="{% url 'delete_row' table_name app_name model_name row.0%}">Delete</a></td>
-                    <td><a href="{% url 'update_row' table_name app_name model_name row.0%}">Update</td>
+                    <td><a href="{% url 'update_row' table_name app_name model_name row.0%}">Edit</td>
                 </tr>
             {% endfor %}
         </tbody>
