--- a/templates/auther/base.html
+++ b/templates/auther/base.html
@@ -4,71 +4,17 @@
 <html>
 <head>
 	<title>My UI Design</title>
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
 </head>
 <style>
 
-  /* section {
-      position: relative;
-      height: 1000px;
-      width: 100%;
-    }
 
-    .background-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    }
 
-    .background-image {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      animation: fade 12s infinite;
-    }
-
-    .image1 {
-      background-image: url("https://elements-cover-images-0.imgix.net/73fe52be-eb3d-464e-838e-c1db5c980519?auto=compress%2Cformat&fit=max&w=1370&s=2abd021ece99533d1589d2e7d5bbad4f.jpg");
-      animation-delay: 0s;
-      opacity: 1;
-    }
-
-    .image2 {
-      background-image: url("https://elements-cover-images-0.imgix.net/237f60e4-507e-4bc8-b992-4a4b149de975?auto=compress%2Cformat&fit=max&w=1370&s=fabf2e013a0207a16f0f25a320e6881a.jpeg");
-      animation-delay: 4s;
-    }
-
-    .image3 {
-      background-image: url("https://elements-preview-images-0.imgix.net/a562eb96-dbb7-467f-8bb0-3186c127bf70?auto=compress%2Cformat&fit=max&w=1370&s=fa82a78e303ed9d81ff4d112b7ca6424.jpg");
-      animation-delay: 8s;
-    }
-
-    @keyframes fade {
-      0% {
-        opacity: 0;
-      }
-      25% {
-        opacity: 1;
-      }
-      75% {
-        opacity: 1;
-      }
-      100% {
-        opacity: 0;
-      }
-    } */
   .dropdown-submenu:hover > .dropdown-menu {
           margin-left: 100%;
           margin-top: -30px;
@@ -207,50 +153,7 @@
     animation: pulse 1s infinite; /* Add animations */
   }
 
-/* 
-  section {
-      position: relative;
-      height: 1000px;
-      width: 100%;
-    }
 
-    .background-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    }
-
-    .background-image {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      animation: fade 12s infinite;
-    }
-
-    .image1 {
-      background-image: url("https://elements-cover-images-0.imgix.net/73fe52be-eb3d-464e-838e-c1db5c980519?auto=compress%2Cformat&fit=max&w=1370&s=2abd021ece99533d1589d2e7d5bbad4f.jpg");
-      animation-delay: 0s;
-      opacity: 1;
-    }
-
-    .image2 {
-      background-image: url("https://elements-cover-images-0.imgix.net/237f60e4-507e-4bc8-b992-4a4b149de975?auto=compress%2Cformat&fit=max&w=1370&s=fabf2e013a0207a16f0f25a320e6881a.jpeg");
-      animation-delay: 4s;
-    }
-
-    .image3 {
-      background-image: url("https://elements-preview-images-0.imgix.net/a562eb96-dbb7-467f-8bb0-3186c127bf70?auto=compress%2Cformat&fit=max&w=1370&s=fa82a78e303ed9d81ff4d112b7ca6424.jpg");
-      animation-delay: 8s;
-    } */
 </style>
 </head>
 <body>
@@ -258,7 +161,7 @@
     <nav>
       <ul>
         <li><h2>Invoice Generator</h2> <li>
-        <li><a href="/home"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="/home"><i class="fas fa-home fa"></i> Home</a></li>
         <li><a href="/About">About</a></li>
         <li><a href="/contact"><i class="fas fa-envelope"></i> Contact Us</a></li>
   
@@ -270,7 +173,7 @@
             <li><a href="/sample">Sample Template</a></li>
 
             <li class="dropdown-submenu">
-              <a href="#">Add Data <i class="fas fa-chevron-right"></i></a>
+              <a href="#">Add Data <i class="fa fa-chevron-right"></i></a>
               <ul class="dropdown-menu pull-right">
                 <li><a href="/org"><span>Organisation Form</span></a></li>
                 <li><a href="/company"><span>Company Form</span></a></li>
@@ -323,12 +226,7 @@
           <a href="/signout"><span>Log out</span><i class="fas fa-sign-out-alt"></i></a>
         </li>
   
-        <!-- <li>
-          <form method="post" action="/search">
-            <input type="text" placeholder="Search...">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
-        </li> -->
+      
   
         {% else %}
         <li><a href="/Login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
