--- a/templates/auther/success.html
+++ b/templates/auther/success.html
@@ -5,10 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Poppins','sans-serif';
+      }
+      .container{
+        width: 100%;
+        height: 100vh;
+        background: #3c5077;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+    .popup{
+      width: 400px;
+      background: #fff;
+      border-radius: 6px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      text-align: center;
+      padding: 0 30px 30px;
+      color: #333;
+    }
+    .popup img{
+      width: 100px;
+      margin-top :-50px; 
+      border-radius: 50%;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    .popup h2{
+      font: size 38px; 
+      font-weight: 500;
+      margin: 30px 0 10px;
+
+    }
+    .popup button{
+      width: 100%;
+      margin-top: 50px;
+      padding: 10px 0;
+      background: #19b0e2;
+      color: #fff;
+      border: 0;
+      outline: none;
+      font-size: 18px;
+      border-radius: 4px;
+      cursor: pointer;
+      box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+    }
+      </style>
 </head>
 <body>
-{% block content %}
-  <h1>Organization created successfully!</h1>
+  <div class="container">
+    <div class="popup">
+      <img src="https://thumbs.dreamstime.com/b/blue-check-mark-icon-tick-symbol-tick-icon-vector-illustration-vector-illustration-isolated-black-background-blue-check-mark-143227416.jpg">
+  <h1>Thank You! </h1>
+  <p>Your Details has been successfully submitted.</p>
+  <button class="button" type="button" onclick="window.location.href='/home'">
+    OK
+  </button>
+  
+  {% block content %}
 {% endblock %}
 </body>
 </html>
